# omniplan-mcp

./: pyproject.toml  test_tools.py
src/omniplan_mcp/: __main__.py  app.py  documents.py  jxa.py  tasks.py
src/omniplan_mcp/tools/: documents.py  tasks.py
